nablarch-parentの5系に合わせて修正